--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,16 @@
     />
 
     <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
       rel="icon"
       type="image/png"
       sizes="128x128"
