--- a/storage/app/public/snippets/about-us.html
+++ b/storage/app/public/snippets/about-us.html
@@ -55,6 +55,16 @@
         full productions through August 2023 which you can view on our Gallery
         page.
       </p>
+
+      <p>
+        For more information about our history, see this article celebrating our
+        10th anniversary in
+        <a
+          href="https://cuencahighlife.com/azuay-community-theater-at-10-ecuadors-only-english-speaking-theater-celebrates-a-decade/"
+          target="_blank"
+          >Cuenca High Life</a
+        >.
+      </p>
     </div>
   </div>
 </div>
